fix layout overflow and increase header height, add legacy projects/gists

--- a/src/ui/styles/index.css
+++ b/src/ui/styles/index.css
@@ -32,7 +32,7 @@
   --z-index-header: 2;
   --z-index-modal: 4;
 
-  --header-height: 30px;
+  --header-height: 40px;
 }
 
 body {
